@@ -17,6 +17,8 @@ from django.contrib import admin
 from django.urls import path
 from django.conf.urls import url
 from django.conf.urls import include
+
+from courses import views as courseView
 from LMSLite import views
 from django.conf import settings
 from django.conf.urls.static import static
@@ -26,6 +28,7 @@ urlpatterns = [
     url(r'^$', views.index, name='index'),
     path('auth/', include('django.contrib.auth.urls')),
     path('profile/', views.profile_view, name='profile'),
+    path('courses/<int:id>/', courseView.course_view, name='course_page')
 ]
 
 if settings.DEBUG:
