@@ -1,5 +1,5 @@
 from django import forms
-from .models import Course
+from .models import Course, Quiz
 from accounts.models import Professor
 
 
@@ -26,3 +26,16 @@ class CourseAdminChangeForm(forms.ModelForm):
 	class Meta:
 		model = Course
 		fields = ('course_name', )
+
+
+"""class QuizCreationForm(forms.ModelForm):
+
+	file 		= forms.FileInput()
+	
+	class Meta:
+		model = Quiz
+		fields = ('assignment_name', )
+
+	def create_quiz(self, file):
+		pass
+"""
