@@ -1,0 +1,74 @@
+# Generated by Django 2.1.7 on 2019-03-12 20:15
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('accounts', '0007_auto_20190308_2257'),
+        ('courses', '0004_auto_20190309_2028'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Assignment',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('assignment_name', models.CharField(blank=True, max_length=255)),
+                ('open_date', models.DateTimeField(auto_now_add=True)),
+                ('due_date', models.DateTimeField(auto_now_add=True)),
+                ('grade', models.BigIntegerField(blank=True, default=None)),
+                ('type', models.SmallIntegerField(blank=True, choices=[(2, 'homework'), (1, 'survey'), (0, 'quiz')])),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Homework',
+            fields=[
+                ('assignment_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='courses.Assignment')),
+                ('link', models.CharField(blank=True, max_length=255)),
+            ],
+            bases=('courses.assignment',),
+        ),
+        migrations.CreateModel(
+            name='Quiz',
+            fields=[
+                ('assignment_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='courses.Assignment')),
+                ('grade_viewable', models.BooleanField()),
+            ],
+            bases=('courses.assignment',),
+        ),
+        migrations.CreateModel(
+            name='Survey',
+            fields=[
+                ('assignment_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='courses.Assignment')),
+            ],
+            bases=('courses.assignment',),
+        ),
+        migrations.AddField(
+            model_name='assignment',
+            name='course_id',
+            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='courses.Course'),
+        ),
+        migrations.AddField(
+            model_name='assignment',
+            name='prof',
+            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='accounts.Professor'),
+        ),
+        migrations.AddField(
+            model_name='course',
+            name='homeworks',
+            field=models.ManyToManyField(to='courses.Homework'),
+        ),
+        migrations.AddField(
+            model_name='course',
+            name='quizes',
+            field=models.ManyToManyField(to='courses.Quiz'),
+        ),
+        migrations.AddField(
+            model_name='course',
+            name='surveys',
+            field=models.ManyToManyField(to='courses.Survey'),
+        ),
+    ]
