@@ -3,11 +3,11 @@
 {% block content %}
 
     <ul>
-{% for course in  user.courses.all %}
+        {% for course in  user.courses.all %}
 
-        <li><a>{{ course.course_name }}</a></li>
+            <li><a href="{% url 'course_page' id=course.id%}">{{ course.course_name }}</a></li>
 
-{%  endfor %}
+        {%  endfor %}
 
     </ul>
 
