@@ -6,3 +6,4 @@
 - Changed Student and Professor Add and Change forms(@Chino96)
 - Added course list to profile page(@Chino96)
 - Changed course creation form and course model(@Chino96)
+- Created base Course Page Template(@Chino96)
